fix: qr code overlaping

--- a/css/business_card.css
+++ b/css/business_card.css
@@ -95,8 +95,8 @@ body {
 .card-top::after {
     background: rgb(77, 235, 213, 0.25);
     opacity: 1;
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(25px);
+    backdrop-filter: blur(25px);
 }
 
 /* ---------- Profile Photo ---------- */
@@ -135,7 +135,7 @@ body {
     border: 1px solid var(--blue-300);
     border-radius: 32px;
     font-size: 16px;
-    backdrop-filter: blur(200px);
+    backdrop-filter: blur(75px);
 }
 
 .name {
@@ -144,6 +144,8 @@ body {
 .sub {
     opacity: 0.5;
     font-weight: 500;
+    width: calc(100% - 32px);
+    margin: 0 auto 0;
 }
 .description {
     font-weight: 300;
@@ -196,10 +198,17 @@ body {
 
 /* ---------- QR Code ---------- */
 .qr-code {
-    position: relative;
-    width: calc(16px * 15);
-    height: calc(16px * 15);
-    top: 32px;
+    position: absolute;
+    bottom: 16px;
     left: 50%;
     transform: translateX(-50%);
+    width: 30%;
+    max-width: 240px;
+    aspect-ratio: 1 / 1;
+}
+
+.qr-code img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
